--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
             <p class="left_title">Contacts</p>
             <p class="left_item">+375-29-632-77-88</p>
             <p class="left_item">pribolovetsvi@yandex.ru</p>
-            <p class="left_item">Ссылка на LinckedIn</p>
+            <p class="left_item">LinckedIn's account will be soon</p>
         </div>
         <div class="works">
             <p class="left_title"> My projects</p>
-            <web-site class="left_item">Ссылка на сайт</web-site>            
+            <web-site class="left_item"><a href="https://valdis2102.github.io/trial_website/" style="color: rgb(34, 33, 33);">My web-site</a></web-site>            
         </div>
     </div>
 
