--- a/index.html
+++ b/index.html
@@ -13,18 +13,20 @@
 <body>
     <div class="left">
         <div class="left_Logo">
-                <img src="img/1.jpg" alt="" class="photo">
+                <img src="img/2.png" alt="" class="photo">
         </div>
-        <div class="left-name">Pribolovets Vladislav</div>
-        <div class="left__contacts">
-            <p class="left_title">Contacts</p>
-            <p class="left_item">+375-29-632-77-88</p>
-            <p class="left_item">pribolovetsvi@yandex.ru</p>
-            <p class="left_item">LinckedIn's account will be soon</p>
-        </div>
-        <div class="works">
-            <p class="left_title"> My projects</p>
-            <web-site class="left_item"><a href="https://valdis2102.github.io/trial_website/" style="color: rgb(34, 33, 33);">My web-site</a></web-site>            
+        <div class="description">
+            <div class="left-name">Pribolovets Vladislav</div>
+            <div class="left__contacts">
+                <p class="left_title">Contacts</p>
+                <p class="left_item">+375-29-632-77-88</p>
+                <p class="left_item">pribolovetsvi@yandex.ru</p>
+                <p class="left_item">LinckedIn's account will be soon</p>
+            </div>
+            <div class="works">
+                <p class="left_title"> My projects</p>
+                <web-site class="left_item"><a href="https://valdis2102.github.io/trial_website/" style="color: rgb(34, 33, 33);">My web-site</a></web-site>            
+            </div>
         </div>
     </div>
 
