--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
             </div>
             <div class="works">
                 <p class="left_title"> My projects</p>
-                <web-site class="left_item"><a href="https://valdis2102.github.io/trial_website/" style="color: rgb(34, 33, 33);">My web-site</a></web-site>            
+                <web-site class="left_item"><a href="https://valdis2102.github.io/trial_website/" style="color: #000;">WEB-SITE</a></web-site>            
             </div>
         </div>
     </div>
 
     <div class="right">
-        <div class="right__proffession">I want to become a <span>Web developer</span></div>
+        <div class="right__proffession">I WANT TO BECOME A <span>WEB DEVELOPER</span></div>
         <div class="right__about">
             <h1 class="right__title">Some words about me</h1>
             <p class="right__subtitle">29 years old, live in Mozyr Republic of Belarus, married, have a child.
