--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
             <div class="works">
                 <p class="left_title"> My projects</p>
-                <web-site class="left_item"><a href="https://valdis2102.github.io/trial_website/" style="color: #000;">WEB-SITE</a></web-site>            
+                <web-site class="left_item"><a href="https://valdis2102.github.io/trial_website/" target="_blank" style="color: #000;">WEB-SITE</a></web-site>            
             </div>
         </div>
     </div>
