--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
         <div class="right__proffession">I WANT TO BECOME A <span>WEB DEVELOPER</span></div>
         <div class="right__about">
             <h1 class="right__title">Some words about me</h1>
-            <p class="right__subtitle">29 years old, live in Mozyr Republic of Belarus, married, have a child.
-
-                I was the head of a taxi company branch. Then created my own company. When I lost my driver's license for 6 months, sold the company and started learning the ServiceNow platform. And in parallel, began to study web development.
+            <p class="right__subtitle">
+                I am 29 years old. I live in Mozyr, Republic of Belarus. I am married and have a child. I was the head of a branch of a taxi company. Then I started my own company. While my company was developing successfully, I became interested in computer technology. I studied the Service Now platform together with web development. I am currently looking for growth opportunities in web development. I am a team player with high personal goals.
             </p>
         </div>
         <div class="right__education">
