--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,300&family=Kanit&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="left">
+    <div class="left" id="mm1">
         <div class="left_Logo">
                 <img src="img/2.png" alt="" class="photo">
         </div>
@@ -30,7 +30,7 @@
         </div>
     </div>
 
-    <div class="right">
+    <div class="right" id="mm2">
         <div class="right__proffession">I WANT TO BECOME A <span>WEB DEVELOPER</span></div>
         <div class="right__about">
             <h1 class="right__title">Some words about me</h1>
@@ -85,4 +85,13 @@
 
     
 </body>
+<script>
+    window.onresize=function(){
+        if(document.getElementById("mm2").clientHeight<document.getElementById("mm1").clientHeight){
+            document.getElementById("mm2").style.height=document.getElementById("mm1").offsetHeight+"px";
+        }else{
+            document.getElementById("mm1").style.height=document.getElementById("mm2").offsetHeight+"px";
+        }
+    }
+</script>
 </html>
