--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <div class="list">
                     <ul>
                       <li>CV</li>
-                      <li>GuessingGame</li>
+                      <li><a href="https://valdis2102.github.io/Guessing-game/">GuessingGame</a></li>
                       <li>MyWay</li>
                     </ul>
                   </div>
