--- a/index.html
+++ b/index.html
@@ -44,8 +44,45 @@
                   <div class="row second">
                     <div class="list">
                     <ul>
-                      <li>Minsk College of Finance and Economics</li>
-                      <li>Academy of public Administration under the President of Republic of Belarus</li>
+                      <li>2010 - 2012 Minsk College of Finance and Economics</li>
+                      <li>2012 - 2017 Academy of public Administration under the President of Republic of Belarus</li>
+                    </ul>
+                    </div>
+                  </div>
+                </div> 
+              </div>
+
+              <div class="block row">
+                <div class="title-ico col">
+                  <img src="img/ico.png" class="ico">
+                </div>
+                <div class="discrition col">
+                  <div class="row first">
+                    <div class="title_name">
+                      <span>COURSES AND LITERATURE</span>
+                    </div>
+                  </div>
+                  <div class="row second">
+                    <div class="list">
+                    <ul>
+                      <li><ul>Web Apps:
+                        <li>developer.servicenow.com - All Learning plans</li>
+                        <li>getmimo.com - Web Development</li>
+                        <li>learn.javascript.ru</li>
+                        <li>codewars.com</li>
+                        <li>getbootstrap.com</li>
+                        <li>vuejs.org</li>
+                      </ul></li>
+                      <li><ul>Literature:
+                        <li>HTML, CSS, and JavaScript All in One - Jennifer Kyrnin</li>
+                        <li>Grokking Algorithms - Adiya Bhargava</li>
+                      </ul></li>
+                      <li><ul>YouTube chanels:
+                        <li>Web Developer Blog</li>
+                        <li>Ulbi TV</li>
+                        <li>Step to Web</li>
+                        <li>FreelancerLifeStyle</li>
+                      </ul></li>
                     </ul>
                     </div>
                   </div>
@@ -78,25 +115,7 @@
                   </div>
                 </div>
 
-                <div class="block row">
-                  <div class="title-ico col">
-                    <img src="img/ico.png" class="ico">
-                  </div>
-                  <div class="discrition col">
-                    <div class="row first">
-                      <div class="title_name">
-                        <span>CONTACTS</span>
-                      </div>
-                    </div>
-                    <div class="row second">
-                      <div class="list">
-                      <p><i class="bi bi-house-fill"></i> Belarus, Mozyr</p>
-                      <p><i class="bi bi-telephone-fill"></i> +375-29-632-77-88</p>
-                      <p><i class="bi bi-envelope-at-fill"></i> dev.prib@gmail.com</p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
+                
               </div>
             </div>
             
@@ -114,7 +133,7 @@
                     <ul>
                       <li>CV</li>
                       <li><a href="https://valdis2102.github.io/Guessing-game/">GuessingGame</a></li>
-                      <li>MyWay</li>
+                      <li><a href="https://valdis2102.github.io/trial_website/">MyWay</a></li>
                     </ul>
                   </div>
                   </div>
@@ -150,6 +169,39 @@
                   </div>
                 </div>
               </div>
+
+              <div class="block row">
+                <div class="discrition col">
+                  <div class="row first">
+                    <div class="title_name lang">
+                      <span>LANGUAGES</span>
+                    </div>
+                  </div>
+                  <div class="row second">
+                    <div class="list">
+                    <p>English - B2 (Upper-Intermediate)</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="block row">
+                <div class="discrition col">
+                  <div class="row first">
+                    <div class="title_name">
+                      <span>CONTACTS</span>
+                    </div>
+                  </div>
+                  <div class="row second">
+                    <div class="list">
+                    <p><i class="bi bi-house-fill"></i> Belarus</p>
+                    <p><i class="bi bi-telephone-fill"></i> +375-29-632-77-88</p>
+                    <p><i class="bi bi-envelope-at-fill"></i> dev.prib@gmail.com</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
           </div>
         </div>
     </div>   
