--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <ul>
                       <li>CV</li>
                       <li><a href="https://valdis2102.github.io/Guessing-game/">GuessingGame</a></li>
-                      <li><a href="https://valdis2102.github.io/trial_website/">MyWay</a></li>
+                      <li><a href="https://valdis2102.github.io/clever_clock/">CLeverClock</a></li>
                     </ul>
                   </div>
                   </div>
