--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
         <div class="main">
           <div class="row">
             <div class="col left">
-
               <div class="block row">
                 <div class="title-ico col">
                   <img src="img/ico.png" class="ico">
@@ -51,7 +50,6 @@
                   </div>
                 </div> 
               </div>
-
               <div class="block row">
                 <div class="title-ico col">
                   <img src="img/ico.png" class="ico">
@@ -88,7 +86,6 @@
                   </div>
                 </div> 
               </div>
-
               <div class="block row">
                 <div class="title-ico col">
                   <img src="img/ico.png" class="ico">
@@ -102,6 +99,7 @@
                   <div class="row second">
                     <div class="list">
                     <ul>
+                      <li>ServiceNow</li>
                       <li>HTML5</li>
                       <li>CSS</li>
                       <li>JavaScript</li>
@@ -114,13 +112,9 @@
                     </div>
                   </div>
                 </div>
-
-                
               </div>
             </div>
-            
             <div class="col right">
-
               <div class="block row">
                <div class="discrition col">
                   <div class="row first">
@@ -139,7 +133,6 @@
                   </div>
                 </div>
               </div>
-
               <div class="block row">
                 <div class="discrition col">
                    <div class="row first">
@@ -156,7 +149,6 @@
                    </div>
                  </div>
                </div>
-
                <div class="block row">
                 <div class="discrition col">
                   <div class="row first">
@@ -169,7 +161,6 @@
                   </div>
                 </div>
               </div>
-
               <div class="block row">
                 <div class="discrition col">
                   <div class="row first">
@@ -184,7 +175,6 @@
                   </div>
                 </div>
               </div>
-
               <div class="block row">
                 <div class="discrition col">
                   <div class="row first">
@@ -201,11 +191,9 @@
                   </div>
                 </div>
               </div>
-
           </div>
         </div>
     </div>   
     </div>
-   
 </body>
 </html>
